...
            ElevatedButton(
              style: ElevatedButton.styleFrom(backgroundColor: Colors.red),
              onPressed: () {
                Navigator.of(context).pop();
                _checkFields();
              },
              child: const Text("Confirmar", style: TextStyle(color: Colors.white)),
            ),
          ],
        );
      },
    );
  }
...
                          ],

                          Row(
                            mainAxisAlignment: MainAxisAlignment.start,
                            children: [
                              Text(
                                'Presupuesto:',
                                style: TextStyle(
                                  fontWeight: FontWeight.bold,
                                  fontSize: 18,
                                  color: Color(0xFF222B6F),
                                ),
                              ),
...
                                    });
                                  },
                                  child: const Text("Modificar", style: TextStyle(color: Colors.white, fontSize: 18)),
                                ),

                                ElevatedButton(
                                  key: const Key('confirmarBoton'),
                                  style: ElevatedButton.styleFrom(
                                      backgroundColor: Colors.green
                                  ),
                                  onPressed: (){_mostrarAvisoConfirmacion(context);},
                                  child: const Text("Confirmar", style: TextStyle(color: Colors.white, fontSize: 18)),
                                ),
                              ],
                              if(_proyecto!.estado==EstadoProyecto.materiales)...[
                                ElevatedButton(
                                  key: const Key('materialesPedidos'),
                                  onPressed: (){
                                    _pedirMateriales();
                                  },
                                  child: const Text("Materiales Pedidos", style: TextStyle(color: Colors.white, fontSize: 18)),
                                ),
                              ],
                              if(_proyecto!.estado==EstadoProyecto.esperando_materiales)...[
                                ElevatedButton(
                                  key: const Key('materialesRecibidos'),
                                  onPressed: (){
                                    _recibirMateriales();
                                  },
                                  child: const Text("Materiales Recibidos", style: TextStyle(color: Colors.white, fontSize: 18)),
                                ),
                              ],
...
